tests/instantiating/range_negative_right_bound/stderr.golden
error: negative range right bound -100
bus.fbd +3:13
   |
 3 |     range = 0:-100
   |             ^^^^^^
